--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
     <div id="root"></div>
 
     <script src="http://127.0.0.1:8000/index.js"></script>
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script> -->
   </body>
 </html>
