--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
 
-    <script src="http://127.0.0.1:8000/index.js"></script>
-    <!-- <script src="js/index.js"></script> -->
+    <!-- <script src="http://127.0.0.1:8000/index.js"></script> -->
+    <script src="js/index.js"></script>
   </body>
 </html>
