--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html style="scroll-behavior: smooth;" lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Simons public portfolio website"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="preload" href="/Fonts/Nunito-Bold.ttf" as="font" type="font/ttf">
+    <link rel="preload" href="/Fonts/DaddyRewind-MVYAP.ttf" as="font" type="font/ttf">
   </head>
   <body>
     <div id="root"></div>
