--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="http://127.0.0.1:8000/index.js"></script>
-    <!-- <script src="js/index.js"></script> -->
+    <script src="js/index.js"></script>
   </body>
 </html>
