--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html style="scroll-behavior: smooth;" lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Simons public portfolio website"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!DOCTYPE html><html lang="en" style="scroll-behavior: smooth"><head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="preload" href="Fonts/Nunito-Bold.ttf" as="font" type="font/ttf">
-    <link rel="preload" href="Fonts/DaddyRewind-MVYAP.ttf" as="font" type="font/ttf">
-  </head>
+  <link rel="stylesheet" href="/index.css"></head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
+    <script type="module" src="index.js"></script>
+  
 
-    <script src="js/index.js"></script>
-  </body>
-</html>
+</body></html>
